tests/latch/static/failing/mandelbrot.wat
version https://git-lfs.github.com/spec/v1
oid sha256:d3317ab33d0040a1824c82580ca21d0d4cc741fa14bb569dea6a16162cb435ad
size 1223614
